# .github

./: .gitignore  .yamllint  CIPLAN.md  CLAUDE.md  README.md
.claude/: settings.json
.github/: CODEOWNERS
docs/: ai-files-migration-plan.md  ai-migration.md  board-guide.md  new-repo-guide.md  org-project.md
governance/: README.md  conformance.md  organogram.md  registry.yml  schema.json
profile/: README.md
rulesets/: README.md  protect-dev.json  protect-main.json  protect-master.json
scripts/: bootstrap-org-project.sh  bootstrap-repo.sh  clean-workspace.sh  promote-reconcile.py  sync-shared-claude.sh  sync-templates.sh  sync-workspace.sh  validate-governance.py
templates/: README.md
templates/A-python-docker/: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
templates/A-python-docker/.claude/commands/: qa.md
templates/A-python-docker/.github/workflows/: ci.yml  nightly.yml  promote-dev-to-main.yml  release.yml
templates/C-docker-ha-addon/: .dockerignore  CLAUDE.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
templates/C-docker-ha-addon/.claude/agents/: qa-gatekeeper.md
templates/C-docker-ha-addon/.claude/commands/: prepush.md  qa.md
templates/C-docker-ha-addon/.github/workflows/: ci.yml  nightly.yml  promote-dev-to-main.yml  release.yml
templates/C-docker-ha-addon/docs/: README.md
templates/C-docker-ha-addon/src/REPLACE_ME/: __init__.py
templates/C-docker-ha-addon/tests/: test_smoke.py
templates/C-docker-ha-addon/tools/: bump_haos_version.py  check_build_from.py  sync_haos_addon.py
tests/: test_promote_reconcile.py  (+1 more)
(+117 files in other folders)
